--- a/installer/product.wxs
+++ b/installer/product.wxs
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+
   <Package Name="CalculatorCppApp"
            Manufacturer="NareshCpp"
            Version="1.0.0"
-           UpgradeCode="6F332E11-8C4D-4B6A-9C32-7A7C0A83A914" />
-    <MediaTemplate />
-    <Feature Id="ProductFeature" Title="CalculatorCppApp" Level="1">
-      <ComponentGroupRef Id="ProductComponents" />
-    </Feature>
-  </Package>
+           UpgradeCode="6F332E11-8C4D-4B6A-9C32-7A7C0A83A914" />
+
+  <MediaTemplate />
+
+  <Feature Id="ProductFeature" Title="CalculatorCppApp" Level="1">
+    <ComponentGroupRef Id="ProductComponents" />
+  </Feature>
 
   <Fragment>
-    <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFiles64Folder">
-        <Directory Id="INSTALLFOLDER" Name="CalculatorCppApp">
-          <Component Id="CalculatorAppExe" Guid="95F9C0E2-4341-5D70-96AB-0058077345A8">
-            <File Id="CalculatorExe" Source="$(var.CPP_BUILD_DIR)\CMakeProject1.exe" KeyPath="yes" />
-          </Component>
-        </Directory>
+    <StandardDirectory Id="ProgramFiles64Folder">
+      <Directory Id="INSTALLFOLDER" Name="CalculatorCppApp">
+        <Component Id="CalculatorAppExe" Guid="95F9C0E2-4341-5D70-96AB-0058077345A8">
+          <File Id="CalculatorExe" Source="$(var.CPP_BUILD_DIR)\CMakeProject1.exe" KeyPath="yes" />
+        </Component>
       </Directory>
-    </Directory>
+    </StandardDirectory>
   </Fragment>
 
   <Fragment>
@@ -27,4 +27,5 @@
       <ComponentRef Id="CalculatorAppExe" />
     </ComponentGroup>
   </Fragment>
+
 </Wix>
