--- a/installer/product.wxs
+++ b/installer/product.wxs
@@ -6,12 +6,14 @@
            Version="1.0.0"
            UpgradeCode="6F332E11-8C4D-4B6A-9C32-7A7C0A83A914">
 
-    <MediaTemplate />
+    <MediaTemplate EmbedCab="yes"/>
 
     <StandardDirectory Id="ProgramFiles64Folder">
       <Directory Id="INSTALLFOLDER" Name="CalculatorCppApp">
         <Component Id="CalculatorAppExe" Guid="95F9C0E2-4341-5D70-96AB-0058077345A8">
-          <File Id="CalculatorExe" Source="$(var.CPP_BUILD_DIR)\CMakeProject1.exe" KeyPath="yes" />
+          <File Id="CalculatorExe" 
+                Source="$(var.BuildDir)\CMakeProject1.exe" 
+                KeyPath="yes" />
         </Component>
       </Directory>
     </StandardDirectory>
