updated the path

--- a/installer/product.wxs
+++ b/installer/product.wxs
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
 
-  <Package Name="CalculatorCppApp"
+  <Product Name="CalculatorCppApp"
            Manufacturer="NareshCpp"
            Version="1.0.0"
            UpgradeCode="6F332E11-8C4D-4B6A-9C32-7A7C0A83A914">
+
+    <Package InstallerVersion="500" Compressed="yes" />
 
     <MediaTemplate EmbedCab="yes"/>
 
@@ -22,6 +24,6 @@
       <ComponentRef Id="CalculatorAppExe" />
     </Feature>
 
-  </Package>
+  </Product>
 
 </Wix>
