--- a/installer/product.wxs
+++ b/installer/product.wxs
@@ -2,11 +2,7 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
 
   <Fragment>
-    <PackageGroup Id="CalculatorPackage">
-      <Package InstallerVersion="500" Compressed="yes" />
-    </PackageGroup>
-
-    <DirectoryRef Id="ProgramFiles64Folder">
+    <StandardDirectory Id="ProgramFiles64Folder">
       <Directory Id="INSTALLFOLDER" Name="CalculatorCppApp">
         <Component Id="CalculatorAppExe" Guid="95F9C0E2-4341-5D70-96AB-0058077345A8">
           <File Id="CalculatorExe" 
@@ -14,7 +10,7 @@
                 KeyPath="yes" />
         </Component>
       </Directory>
-    </DirectoryRef>
+    </StandardDirectory>
 
     <ComponentGroup Id="CalculatorComponents">
       <ComponentRef Id="CalculatorAppExe" />
@@ -28,7 +24,10 @@
              Language="1033"
              UpgradeCode="6F332E11-8C4D-4B6A-9C32-7A7C0A83A914">
 
-      <PackageGroupRef Id="CalculatorPackage" />
+      <Package InstallerVersion="500" Compressed="yes" />
+
+      <MediaTemplate EmbedCab="yes"/>
+
       <Feature Id="ProductFeature" Title="CalculatorCppApp" Level="1">
         <ComponentGroupRef Id="CalculatorComponents" />
       </Feature>
